Lab 7 fixing feature card to use a darker background for dark mode

--- a/packages/proto/public/styles/tokens.css
+++ b/packages/proto/public/styles/tokens.css
@@ -5,6 +5,7 @@
 
   --color-background-page: rgb(245 245 245);
   --color-background-header: rgb(34 139 34);
+  --color-background-card: rgb(255 255 255);
 
   --color-text: rgb(51 51 51);
   --color-text-inverted: rgb(255 255 255);
@@ -34,6 +35,7 @@
 body.dark-mode {
   --color-background-page: rgb(30 30 30);
   --color-background-header: rgb(20 20 20);
+  --color-background-card: rgb(50 50 50);
   --color-text: rgb(240 240 240);
   --color-accent: rgb(46 175 46);
   --color-link: rgb(46 175 46);
